--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "btrees (>=6.1,<7.0)"
+    "btrees (>=6.1,<7.0)",
+    "mmh3 (>=5.1.0,<6.0.0)",
+    "bitarray (>=3.0.0,<4.0.0)"
 ]
 
 
