--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = ">=3.13"
 dependencies = [
     "btrees (>=6.1,<7.0)",
     "mmh3 (>=5.1.0,<6.0.0)",
-    "bitarray (>=3.0.0,<4.0.0)"
+    "bitarray (>=3.0.0,<4.0.0)",
+    "pandas (>=2.2.3,<3.0.0)",
+    "datasketch (>=1.6.5,<2.0.0)"
 ]
 
 
