--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "mmh3 (>=5.1.0,<6.0.0)",
     "bitarray (>=3.0.0,<4.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
-    "datasketch (>=1.6.5,<2.0.0)"
+    "datasketch (>=1.6.5,<2.0.0)",
+    "requests (>=2.32.3,<3.0.0)"
 ]
 
 
