--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "datasketch (>=1.6.5,<2.0.0)",
     "requests (>=2.32.3,<3.0.0)",
-    "matplotlib (>=3.10.0,<4.0.0)"
+    "matplotlib (>=3.10.0,<4.0.0)",
 ]
 
 
